# magic-gatherer-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: bulk_data.rs  card_api.rs  cards.rs  main.rs  types.rs
