[package]
name = "magic-gatherer-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
minreq = { version = "2.11.0", features = ["https", "json-using-serde"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# [dev-dependencies]
# mockito = "1.5.0"
