[package]
name = "magic-gatherer-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.12.8", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

# [dev-dependencies]
# mockito = "1.5.0"

[profile.dev]
debug = 0
strip = "debuginfo"
